<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".FinancesMenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finances_menu_main_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btn_menu_manage_customer_debts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finances_menu_btn_manage_customer_debts"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_menu_manage_monthly_taxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finances_menu_btn_manage_monthly_taxes"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_menu_view_sales_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finances_menu_btn_view_sales_stats"/>

</LinearLayout>
