<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddEditFrameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_frame_label_frame_type"
        android:layout_marginTop="8dp"/>
    <Spinner
        android:id="@+id/spinner_tipo_montura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/et_cantidad_stock_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_edit_frame_hint_stock_quantity"
        android:inputType="number"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btn_save_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_frame_btn_save_frame"/>

</LinearLayout>
