<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddEditLensActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_lens_label_lens_classification"
        android:layout_marginTop="8dp"/>
    <Spinner
        android:id="@+id/spinner_clasificacion_cristal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/et_cantidad_stock_lens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_edit_frame_hint_stock_quantity"
        android:inputType="number"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btn_save_lens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_lens_btn_save_lens"/>

</LinearLayout>
