<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditDebtActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/actv_debt_customer_cedula_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_order_hint_customer_cedula"
            android:layout_marginBottom="16dp">

            <AutoCompleteTextView
                android:id="@+id/actv_debt_customer_cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/et_debt_monto_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_debt_hint_total_amount"
            android:inputType="numberDecimal"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btn_save_debt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_debt_btn_save_debt"/>

    </LinearLayout>
</ScrollView>
