<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderListActivity">

    <Spinner
        android:id="@+id/spinner_filter_order_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_clear_filter"
        android:layout_margin="8dp"
        android:prompt="@string/order_list_filter_prompt" />

    <Button
        android:id="@+id/btn_clear_filter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/order_list_btn_clear_filter"
        app:layout_constraintTop_toTopOf="@id/spinner_filter_order_status"
        app:layout_constraintBottom_toBottomOf="@id/spinner_filter_order_status"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_filter_order_status"
        app:layout_constraintBottom_toTopOf="@+id/fab_add_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        tools:listitem="@layout/item_order"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/order_list_fab_content_description" />

</androidx.constraintlayout.widget.ConstraintLayout>
